--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -6,23 +6,23 @@
 	$black: #16161a;
 	$gray:#f7f7fd;
 
-//Theme color
-	$theme-color: #670000;
-	$theme-color2: #1f2b7b;
-	$theme-color3: #f27420;
-	$theme-color4: #ff3500;
+//Theme color - QQ Palette
+	$theme-color: #5A3E85;
+	$theme-color2: #3A3A3A;
+	$theme-color3: #7FAE9D;
+	$theme-color4: #7FAE9D;
 
 // btn and Section color
-	$btn_bg:#670000;
+	$btn_bg:#5A3E85;
 
 // Heading color
-	$heading-color:#670000;
-	$heading_color2: #080808;
+	$heading-color:#5A3E85;
+	$heading_color2: #3A3A3A;
 
 	
 // Body font color
-	$font_color1: #000000;
-	$border_color: #fdcb9e;
+	$font_color1: #3A3A3A;
+	$border_color: #7FAE9D;
 
 // Body Font
 	$body-text-color: #646D77;
@@ -31,8 +31,8 @@
 
 
 // Section Bg variable
-	$section_bg1: #FFEFAE;
-	$section_bg2: #670000;
+	$section_bg1: #F5F3F8;
+	$section_bg2: #5A3E85;
 
 // bg calss
 	.section-bg1{
